# prompt-architect-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development_roadmap.md  prompt_strategy.md  release-notes-v0.2.0.md  release-notes-v0.3.0.md  web_desktop.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
packaging/: prompt-architect.spec  windows-installer.iss
prompt_architect/: __init__.py  __main__.py  cli.py  config_loader.py  publisher.py  security.py  service.py
prompt_architect/adapters/: __init__.py  base.py  chat_model.py  claude_code.py  codex.py  image_model.py  registry.py
prompt_architect/analyzers/: __init__.py  complexity_scorer.py  requirement_analyzer.py  task_classifier.py
prompt_architect/compiler/: __init__.py  prompt_compiler.py
prompt_architect/config/: __init__.py  complexity_rules.yaml  model_profiles.yaml  task_types.yaml
prompt_architect/context/: __init__.py  context_manager.py
prompt_architect/evaluators/: __init__.py  prompt_reviewer.py
prompt_architect/llm/: __init__.py  context.py  credentials.py  deepseek.py  models.py  orchestrator.py
prompt_architect/llm/prompts/: analyze.txt  generate.txt  repair.txt  review.txt
prompt_architect/routing/: __init__.py  strategy_router.py
prompt_architect/schemas/: __init__.py  evaluation.py  prompt.py  task.py
prompt_architect/templates/compact/: prompt.en.md.j2  prompt.zh.md.j2
prompt_architect/templates/project/: acceptance.en.md.j2  acceptance.zh.md.j2  brief.en.md.j2  brief.zh.md.j2  phase.en.md.j2  phase.zh.md.j2
prompt_architect/templates/staged/: index.en.md.j2  index.zh.md.j2  stage.en.md.j2  stage.zh.md.j2
prompt_architect/templates/structured/: prompt.en.md.j2  prompt.zh.md.j2
prompt_architect/web/: __init__.py  agent.py  app.py  desktop.py  models.py  paths.py  runs.py  storage.py
prompt_architect/web/static/: index.html
prompt_architect/web/static/assets/: index-B7iSz7Ll.js  index-B9KjTtz9.js  index-CCWtI883.css  index-hTkhKwBs.css
tests/scenarios/: test_scenarios.py
tests/unit/: test_adapters.py  test_agent_api.py  test_agent_context.py  test_analyzer.py  test_cli.py  test_compiler_reviewer.py  test_complexity.py  test_context.py  test_deepseek.py  test_router.py  test_service_build.py  test_web_api.py  test_web_storage.py
