[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-architect-agent"
version = "0.1.0"
description = "A rule-based prompt architecture CLI that selects the right prompt strategy for each task."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "qinkaijia" }]
keywords = ["prompt-engineering", "ai-agents", "codex", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "Jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "rich>=13,<16",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
prompt-architect = "prompt_architect.cli:app"

[project.urls]
Homepage = "https://github.com/qinkaijia/prompt-architect-agent"
Repository = "https://github.com/qinkaijia/prompt-architect-agent"
Issues = "https://github.com/qinkaijia/prompt-architect-agent/issues"

[tool.setuptools.packages.find]
include = ["prompt_architect*"]

[tool.setuptools.package-data]
prompt_architect = ["config/*.yaml", "templates/*/*.j2"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
