[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-architect-agent"
version = "0.2.0"
description = "A local-first prompt architecture workbench for desktop, browser, and CLI use."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "qinkaijia" }]
keywords = ["prompt-engineering", "ai-agents", "codex", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "Jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "rich>=13,<16",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.115,<1",
  "platformdirs>=4,<5",
  "uvicorn>=0.34,<1",
]
desktop = [
  "fastapi>=0.115,<1",
  "platformdirs>=4,<5",
  "pywebview>=5.4,<7",
  "uvicorn>=0.34,<1",
]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
]
build = [
  "fastapi>=0.115,<1",
  "platformdirs>=4,<5",
  "pyinstaller>=6.12,<7",
  "pywebview>=5.4,<7",
  "uvicorn>=0.34,<1",
]

[project.scripts]
prompt-architect = "prompt_architect.cli:app"
prompt-architect-desktop = "prompt_architect.web.desktop:main"

[project.urls]
Homepage = "https://github.com/qinkaijia/prompt-architect-agent"
Repository = "https://github.com/qinkaijia/prompt-architect-agent"
Issues = "https://github.com/qinkaijia/prompt-architect-agent/issues"

[tool.setuptools.packages.find]
include = ["prompt_architect*"]

[tool.setuptools.package-data]
prompt_architect = ["config/*.yaml", "templates/*/*.j2", "web/static/**/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
